# tourss

./: hostel.db  pyproject.toml
app/: __init__.py
app/db/: __init__.py  base.py
app/db/models/: tour.py
app/routes/: tour.py
app/templates/: add_tour.html  base.html  edit_tour.html  index.html  manage_rooms.html  navigation.html  reserved.html
